@@ -6,3 +6,4 @@
 #undef DRIVER_HPUX
 #undef DRIVER_SOLARIS
 #undef DRIVER_MKLINUX
+#undef DRIVER_ALSA
