@@ -12,7 +12,9 @@ static int esd_audio_fd = -1;
 /*******************************************************************/
 /* returns audio_fd for use by main prog - platform dependent */
 
-#if defined(DRIVER_OSS)
+#if defined(DRIVER_ALSA) /* ALSA before OSS as ALSA is OSS compatible */
+#  include "audio_alsa.c"
+#elif defined(DRIVER_OSS)
 #  include "audio_oss.c"
 #elif defined(DRIVER_AIX)
 #  include "audio_aix.c"
