@@ -6,7 +6,7 @@ AM_PROG_LIBTOOL
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_RANLIB
-AC_CHECK_HEADERS(soundcard.h sys/soundcard.h machine/soundcard.h sys/audio.h sys/audioio.h sys/audio.io.h sun/audioio.h dmedia/audio.h)
+AC_CHECK_HEADERS(soundcard.h sys/soundcard.h machine/soundcard.h sys/audio.h sys/audioio.h sys/audio.io.h sun/audioio.h dmedia/audio.h sys/soundlib.h)
 
 if test "${ac_cv_header_sys_soundcard_h}" = "yes" || \
    test "${ac_cv_header_soundcard_h}" = "yes" || \
@@ -46,11 +46,16 @@ if test "${ac_cv_header_dmedia_audio_h}" = "yes"; then
    esac
 fi
 
+if test "${ac_cv_header_sys_soundlib_h}" = "yes"; then
+   AC_DEFINE(DRIVER_ALSA)
+fi
+
 AC_CHECK_FUNC(connect,,[AC_CHECK_LIB(socket,connect)])
 AC_CHECK_FUNC(gethostbyname,,[AC_CHECK_LIB(nsl,gethostbyname)])
 AC_CHECK_FUNC(inet_aton,,[AC_CHECK_LIB(resolv,inet_aton)])
 AC_CHECK_FUNC(_oss_ioctl,,[AC_CHECK_LIB(ossaudio,_oss_ioctl)])
 AC_CHECK_FUNC(ALnewconfig,,[AC_CHECK_LIB(audio,ALnewconfig)])
+AC_CHECK_FUNC(snd_cards,,[AC_CHECK_LIB(sound,snd_cards)])
 
 AC_PROG_MAKE_SET
 
